support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_badeval.i
%module xxx

#if FOO==4
#elif FOO==4+
#endif






